--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
     <div class="container" style="text-align: center; background-color: rgba(34, 33, 32, 0.479); color: white; padding: 10px; border-radius: 20px; margin-top: 30px;">
       <h3 style="font-weight: 800; border-bottom: 1px solid black;">Important Link For Management</h3>
       <div class="btnHear">
-        <a class="btn" style="width: 50%;" href="#">Enrollment</a>
-        <a class="btn" style="width: 50%;" href="#">Download Admit Card</a>
-        <a class="btn" style="width: 50%;" href="#">Administration Login</a>
+        <a class="btn" style="width: 50%;" href="Enrollment.html">Enrollment</a>
+        <a class="btn" style="width: 50%;" href="AdmitCard.html">Download Admit Card</a>
+        <a class="btn" style="width: 50%;" href="#">Search Applicants</a>
       </div>
     </div>
 
