--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       <div class="btnHear">
         <a class="btn" style="width: 50%;" href="Enrollment.html">Enrollment</a>
         <a class="btn" style="width: 50%;" href="AdmitCard.html">Download Admit Card</a>
-        <a class="btn" style="width: 50%;" href="#">Search Applicants</a>
+        <a class="btn" style="width: 50%;" href="https://script.google.com/macros/s/AKfycbwVzRPGlG1edHLR4gyoRmbUejOK-LybKNTv9dRQAqrDle53jompYNod6Rwn7k7wn34/exec">Search Applicants</a>
       </div>
     </div>
 
