--- a/index.html
+++ b/index.html
@@ -98,6 +98,8 @@
         <a class="btn" style="width: 50%;" href="Enrollment.html">Enrollment</a>
         <a class="btn" style="width: 50%;" href="AdmitCard.html">Download Admit Card</a>
         <a class="btn" style="width: 50%;" href="https://script.google.com/macros/s/AKfycbwVzRPGlG1edHLR4gyoRmbUejOK-LybKNTv9dRQAqrDle53jompYNod6Rwn7k7wn34/exec">Search Applicants</a>
+        <a class="btn" style="width: 50%;" href="LiveReport.html">Live Report</a>
+
       </div>
     </div>
 
